Send data packets to Azure IoT Hub

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,4 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+DeviceConnectionString=HostName=Licenta22.azure-devices.net;DeviceId=Phone;SharedAccessKey=XIaBv8pTEeT5L9cp+9BBQjTBQFvwdmN3BtJZSnptMCo=
