--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,17 +33,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
     packagingOptions {
-        exclude "META-INF/MSFTSIG.SF"
-        exclude "META-INF/MSFTSIG.RSA"
-        exclude 'META-INF/DEPENDENCIES'
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'thirdpartynotice.txt'
+        resources {
+            excludes += ['META-INF/MSFTSIG.SF', 'META-INF/MSFTSIG.RSA', 'META-INF/DEPENDENCIES', 'META-INF/NOTICE', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/NOTICE.txt', 'thirdpartynotice.txt']
+        }
     }
+
 
     buildFeatures {
         viewBinding true
