--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 def IOTHUB_DEVICE_CONNECTION_STRING_ENV_VAR_NAME = project.hasProperty('DeviceConnectionString') ? '"' + project.property('DeviceConnectionString') + '"' : '"Define Device Connection"'
+def IOTHUB_DEVICE_CONNECTION_ID_ENV_VAR_NAME = project.hasProperty('DeviceId') ? '"' + project.property('DeviceId') + '"' : '"Define Device Id"'
 def STRING = 'String'
 
 android {
@@ -20,6 +21,7 @@ android {
         each {
             //buildTypes.mBuildConfigFields 'DATATYPE','VARIABLE',|"GRADLE VARIABLE|"'
             buildConfigField STRING, 'DeviceConnectionString', IOTHUB_DEVICE_CONNECTION_STRING_ENV_VAR_NAME
+            buildConfigField STRING, 'DeviceId', IOTHUB_DEVICE_CONNECTION_ID_ENV_VAR_NAME
         }
     }
 
@@ -60,6 +62,7 @@ dependencies {
     implementation('com.microsoft.azure.sdk.iot:iot-device-client:1.14.2') {
         exclude module: 'azure-storage'
     }
+    implementation 'com.microsoft.azure.sdk.iot:iot-service-client:1.17.0'
     implementation('com.microsoft.azure.android:azure-storage-android:2.0.0@aar')
     implementation('org.apache.commons:commons-lang3:3.6')
     testImplementation 'junit:junit:4.13.2'
